Added selection shadow remove in sass

--- a/skin/frontend/meanbee/default/css/styles.css
+++ b/skin/frontend/meanbee/default/css/styles.css
@@ -9,7 +9,9 @@ abbr {
 textarea {
   resize: vertical; }
 
-/*::selection,::-moz-selection {  }*/
+::selection, ::-moz-selection {
+  text-shadow: none; }
+
 html {
   background: white;
   color: black;
