--- a/app/design/frontend/meanbee/default/layout/local.xml
+++ b/app/design/frontend/meanbee/default/layout/local.xml
@@ -13,12 +13,11 @@
             <action method="addItem"><type>skin_css</type><name>css/styles.css</name></action>
             <action method="addItem"><type>skin_css</type><name>css/widgets.css</name></action>
             <action method="addItem"><type>skin_js</type><name>js/html5shiv.js</name></action>
-            <action method="addItem"><type>skin_js</type><name>js/selectivizr-min.js</name></action>
+            <action method="addItem"><type>skin_js</type><name>js/selectivizr-min.js</name><params/><if>lt IE 9</if></action>
         </reference>
 
         <reference name="before_body_end">
             <block type="boilerplate/page_footer_js" name="footer.scripts" template="page/html/footer_scripts.phtml">
-                <action method="addSkinJs"><name>js/prototype.formalize.min.js</name></action>
             </block>
         </reference>
     </default>
