--- a/skin/frontend/meanbee/default/css/_product.scss
+++ b/skin/frontend/meanbee/default/css/_product.scss
@@ -200,7 +200,7 @@
     }
 }
 
-.product-view { border: 1px solid #c4c6c8; }
+.product-view {}
 
 .product-essential { background: #fff url(../images/bkg_product-view.gif) no-repeat 100% 0; padding: 25px;
     h2 { font: bold em(13)/1.35 Arial, Helvetica, sans-serif; }
