--- a/skin/frontend/meanbee/default/css/_sidebar.scss
+++ b/skin/frontend/meanbee/default/css/_sidebar.scss
@@ -1,5 +1,5 @@
 /* Sidebar ======================================================================= */
-.block { border: 1px solid #c4c1bc; margin: 0 0 15px;
+.block { margin: 0 0 15px;
     .block-title {
         strong { display: block; font: bold em(12)/em(16) Arial, Helvetica, sans-serif; min-height: 16px; padding: 1px 0 1px; text-transform: uppercase;
             span {}
