--- a/skin/frontend/meanbee/default/css/_layout.scss
+++ b/skin/frontend/meanbee/default/css/_layout.scss
@@ -115,7 +115,7 @@ footer { margin: 0 auto; padding: 10px 10px 50px; text-align: center; width: 930
             &:hover { text-decoration: none; }
         }
     }
-    address { color: #363636; margin: 0 0 20px; }
+    address { color: #363636; margin: 20px 0; }
     ul { display: inline; }
     ul.links { display: block; }
     li { display: inline; padding: 0 7px 0 4px; }
